# OpenSettlers

./: .gitignore  COPYING  README.md  a.txt
src/: CMakeLists.txt  Config.cpp  Config.h  ConfigFile.cpp  ConfigFile.h  ConfigList.cpp  ConfigList.h  ConfigTemplate.h  GlobalStrings.h  Log.cpp  Log.h  MenuEvents.cpp  MenuEvents.h  ReturnData.cpp  ReturnData.h  StartMenu.cpp  StartMenu.h  StartupArguments.cpp  StartupArguments.h  config.h  config.h.in  main.cpp  main.h
src/Converter/: CMakeLists.txt  Converter.cpp  Converter.h
src/Converter/Settlers3/: Convert.cpp  Convert.h  ConvertData.h  SetupData.cpp
src/Converter/Settlers3/GUI/: ConvertGUI.h
src/Converter/Settlers3/GUI/MenusAndLoadingScreens/: Amazon.cpp  Gold.cpp  MissionCD.cpp  Original.cpp
src/Convertor/: Converter.cpp  Converter.h
src/Convertor/Settlers3/: Convert.cpp  Convert.h  ConvertData.h  Converter_Landscape.cpp  Converter_MapObjects.cpp  SetupData.cpp  SortedExtractor.cpp  SortedExtractor.h
src/Convertor/Settlers3/GUI/: ConvertGUI.h
src/Convertor/Settlers3/GUI/MenusAndLoadingScreens/: Amazon.cpp  Gold.cpp  MissionCD.cpp  Original.cpp
src/Convertor/Settlers3/SortedExtraction/: SortedExtractor_GUI.cpp  SortedExtractor_Landscape.cpp  SortedExtractor_MapObjects.cpp
src/Extractor/: CMakeLists.txt  Extractor.cpp  Extractor.h  eType.h  main_Extractor.cpp  main_Extractor.h
src/Extractor/Settlers2/: BBMDataType.cpp  BBMDataType.h  BOBDataType.cpp  BOBDataType.h  Extractor.cpp  Extractor.h  IDXDATDataType.cpp  IDXDATDataType.h  LBMDataType.cpp  LBMDataType.h  LSTDataType.cpp  LSTDataType.h
src/Extractor/Settlers2/LBM/: LBMAnimationData.cpp  LBMAnimationData.h  LBMBMHD.cpp  LBMBMHD.h  LBMHeader.cpp  LBMHeader.h  LBMImage.cpp  LBMImage.h  LBMPalette.cpp  LBMPalette.h
src/Extractor/Settlers2/LST/: FontData.cpp  FontData.h  LSTHeader.cpp  LSTHeader.h  PaletteData.cpp  PaletteData.h  PlayerColouredBitmap.cpp  PlayerColouredBitmap.h  RLECompressedBitmap.cpp  RLECompressedBitmap.h  ShadowBitmap.cpp  ShadowBitmap.h  UncompressedBitmap.cpp  UncompressedBitmap.h  WAVData.cpp  WAVData.h  XMIDIData.cpp  XMIDIData.h
src/Extractor/Settlers2/MAP/: MAPBlock.cpp  MAPBlock.h  MAPDataType.cpp  MAPDataType.h  MAPHeader.cpp  MAPHeader.h
src/Extractor/Settlers3/: Extractor.cpp  Extractor.h  GFXDataType.cpp  GFXDataType.h  MAPDataType.cpp  MAPDataType.h  SNDDataType.cpp  SNDDataType.h  VersionCheck.cpp  VersionCheck.h
src/Extractor/Settlers3/GFX/: AnimationData.cpp  AnimationData.h  GFXAnimation.cpp  GFXAnimation.h  GFXGUI.cpp  GFXGUI.h  GFXHeader.cpp  GFXHeader.h  GFXLandscape.cpp  GFXLandscape.h  GFXObject.cpp  GFXObject.h  GFXPalette.cpp  GFXPalette.h  GFXShadow.cpp  GFXShadow.h  GFXText.cpp  GFXText.h  GFXTorso.cpp  GFXTorso.h  PaletteFrameData.h  PaletteImageData.h  RGBFrameData.cpp  RGBFrameData.h  RGBImageData.cpp  RGBImageData.h
src/Extractor/Settlers3/GFX/Data/: AnimationData.cpp  AnimationData.h  PaletteFrameData.cpp  PaletteFrameData.h  PaletteImageData.cpp  PaletteImageData.h  RGBFrameData.cpp  RGBFrameData.h  RGBImageData.cpp  RGBImageData.h
src/Extractor/Settlers3/Lists/: Buildings.h  Goods.h  MapObjects.h  Resources.h  Settlers.h
src/Extractor/Settlers3/Map/: MAPHeader.cpp  MAPHeader.h  MAPParts.cpp  MAPParts.h  MapArea.cpp  MapArea.h  MapBuildings.cpp  MapBuildings.h  MapGoods.cpp  MapGoods.h  MapInfo.cpp  MapInfo.h  MapPlayerInfo.cpp  MapPlayerInfo.h  MapPreviewImage.cpp  MapPreviewImage.h  MapSettlers.cpp  MapSettlers.h  MapTeamInfo.cpp  MapTeamInfo.h  MapText.cpp  MapText.h  MapVictoryConditions.cpp  MapVictoryConditions.h
src/Extractor/Settlers3/Map/MAPParts/: MapArea.cpp  MapArea.h  MapBuildings.cpp  MapBuildings.h  MapGoods.cpp  MapGoods.h  MapInfo.cpp  (+13 more)
src/Extractor/Settlers3/SND/: SNDData.cpp  SNDData.h  SNDFrame.cpp  SNDFrame.h  SNDHeader.cpp  SNDHeader.h
src/Functions/: CMakeLists.txt  DataReader.cpp  DataReader.h  FileFunctions.cpp  FileFunctions.h  FileImage.cpp  FileImage.h  FileOpen.cpp  FileOpen.h  FileRun.cpp  FileRun.h  FileSave.cpp  FileSave.h  OutputVar.h  RGBA.cpp  RGBA.h  RemoveFolder.cpp  RemoveFolder.h  Timer.cpp  Timer.h  To.cpp  To.h  iconv.cpp  iconv.h
src/Functions/Audio/: WAVData.cpp  WAVData.h  XMIDIData.cpp  XMIDIData.h
src/Functions/File/: DataReader.cpp  DataReader.h  Functions.cpp  Functions.h  Image.cpp  Image.h  Open.cpp  Open.h  Run.cpp  Run.h  Save.cpp  Save.h  TextFile.cpp  TextFile.h  TextLoad.cpp  TextLoad.h  XML.cpp  XML.h
src/Functions/Image/: ConvertPALtoRGB.cpp  ConvertPALtoRGB.h  FileImage.cpp  FileImage.h  Palette.cpp  Palette.h  PaletteData.cpp  PaletteData.h  PaletteImage.cpp  PaletteImage.h  PaletteImageData.cpp  PaletteImageData.h  RGBA.cpp  RGBA.h  RGBImage.cpp  RGBImage.h  RGBImageData.cpp  RGBImageData.h
src/Functions/Image/Files/: BMPv2.cpp  BMPv4.cpp  PNG.cpp
src/GFXInterface/: CMakeLists.txt  GFXLoadingScreen.cpp  GFXLoadingScreen.h  GFXMenu.cpp  GFXMenu.h  GFXReturn.cpp  GFXReturn.h
src/GFXInterface/GFXItems/: GFXBox.cpp  GFXBox.h  GFXButton.cpp  GFXButton.h  GFXImage.cpp  GFXImage.h  GFXItem.cpp  GFXItem.h  GFXSpacer.cpp  GFXSpacer.h  GFXText.cpp  GFXText.h
src/Game/: CMakeLists.txt  Game.cpp  Game.h  GameMenu.cpp  GameMenu.h
src/LogSystem/: LogSystem.cpp  LogSystem.h
src/OSDataFile/: APILEVELS.h  CMakeLists.txt  OSDataFile.cpp  OSDataFile.h  eTypes.h
src/OSDataFile/FileTypes/: FileTypes.cpp  FileTypes.h  GameData.cpp  GameData.h  GameOptions.cpp  GameOptions.h  GameType.cpp  GameType.h
src/OSDataFile/FileTypes/Layout/: GUILayout.cpp  GUILayout.h  LoadingScreenLayout.cpp  LoadingScreenLayout.h  MenuLayout.cpp  MenuLayout.h
src/OSDataFile/FileTypes/MapSetup/: MapSetup.cpp  MapSetup.h
src/SystemInterface/: CMakeLists.txt  Display.h  Events.h  Fonts.h  ImageContainer.h  System.h
src/SystemInterface/OGL21/: OGL21Display.cpp  OGL21Display.h  OGL21ImageContainer.cpp  OGL21ImageContainer.h  OGL21System.cpp  OGL21System.h
src/SystemInterface/SDL2/: SDL2Display.cpp  SDL2Display.h  SDL2Events.cpp  SDL2Events.h  SDL2Fonts.cpp  SDL2Fonts.h  SDL2ImageContainer.cpp  SDL2ImageContainer.h  SDL2System.cpp  SDL2System.h
(+29 files in other folders)
