set(src_extractor
	eType.h

	Settlers2/LBM/LBMHeader.cpp
	Settlers2/LBM/LBMHeader.h
	Settlers2/LBM/LBMImage.cpp
	Settlers2/LBM/LBMImage.h
	Settlers2/LBM/LBMBMHD.cpp
	Settlers2/LBM/LBMBMHD.h
	Settlers2/LBM/LBMAnimationData.cpp
	Settlers2/LBM/LBMAnimationData.h
	Settlers2/LST/RLECompressedBitmap.cpp
	Settlers2/LST/RLECompressedBitmap.h
	Settlers2/LST/UncompressedBitmap.cpp
	Settlers2/LST/UncompressedBitmap.h
	Settlers2/LST/FontData.cpp
	Settlers2/LST/FontData.h
	Settlers2/LST/WAVData.cpp
	Settlers2/LST/WAVData.h
	Settlers2/LST/PlayerColouredBitmap.cpp
	Settlers2/LST/PlayerColouredBitmap.h
	Settlers2/LST/ShadowBitmap.cpp
	Settlers2/LST/ShadowBitmap.h
	Settlers2/LST/XMIDIData.cpp
	Settlers2/LST/XMIDIData.h
	Settlers2/MAP/MAPBlock.cpp
	Settlers2/MAP/MAPBlock.h
	Settlers2/MAP/MAPHeader.cpp
	Settlers2/MAP/MAPHeader.h
	Settlers2/MAP/MAPDataType.cpp
	Settlers2/MAP/MAPDataType.h
	Settlers2/BBMDataType.cpp
	Settlers2/BBMDataType.h
	Settlers2/BOBDataType.cpp
	Settlers2/BOBDataType.h
	Settlers2/IDXDATDataType.cpp
	Settlers2/IDXDATDataType.h
	Settlers2/LSTDataType.cpp
	Settlers2/LSTDataType.h
	Settlers2/LBMDataType.cpp
	Settlers2/LBMDataType.h
	Settlers2/Extractor.cpp
	Settlers2/Extractor.h

	Settlers3/VersionCheck.cpp
	Settlers3/VersionCheck.h
	Settlers3/Lists/Buildings.h
	Settlers3/Lists/Goods.h
	Settlers3/Lists/MapObjects.h
	Settlers3/Lists/Resources.h
	Settlers3/Lists/Settlers.h
	Settlers3/GFX/AnimationData.cpp
	Settlers3/GFX/AnimationData.h
	Settlers3/GFX/RGBFrameData.cpp
	Settlers3/GFX/RGBFrameData.h
	Settlers3/GFX/RGBImageData.cpp
	Settlers3/GFX/RGBImageData.h
	Settlers3/GFX/PaletteFrameData.cpp
	Settlers3/GFX/PaletteFrameData.h
	Settlers3/GFX/PaletteImageData.cpp
	Settlers3/GFX/PaletteImageData.h
	Settlers3/GFX/GFXHeader.cpp
	Settlers3/GFX/GFXHeader.h
	Settlers3/GFX/GFXAnimation.cpp
	Settlers3/GFX/GFXAnimation.h
	Settlers3/GFX/GFXGUI.cpp
	Settlers3/GFX/GFXGUI.h
	Settlers3/GFX/GFXLandscape.cpp
	Settlers3/GFX/GFXLandscape.h
	Settlers3/GFX/GFXObject.cpp
	Settlers3/GFX/GFXObject.h
	Settlers3/GFX/GFXText.cpp
	Settlers3/GFX/GFXText.h
	Settlers3/GFX/GFXPalette.cpp
	Settlers3/GFX/GFXPalette.h
	Settlers3/GFX/GFXShadow.cpp
	Settlers3/GFX/GFXShadow.h
	Settlers3/GFX/GFXTorso.cpp
	Settlers3/GFX/GFXTorso.h
	Settlers3/SND/SNDHeader.cpp
	Settlers3/SND/SNDHeader.h
	Settlers3/SND/SNDFrame.cpp
	Settlers3/SND/SNDFrame.h
	Settlers3/SND/SNDData.cpp
	Settlers3/SND/SNDData.h
	Settlers3/Map/MAPHeader.cpp
	Settlers3/Map/MAPHeader.h
	Settlers3/Map/MAPParts.cpp
	Settlers3/Map/MAPParts.h
	Settlers3/Map/MapArea.cpp
	Settlers3/Map/MapArea.h
	Settlers3/Map/MapBuildings.cpp
	Settlers3/Map/MapBuildings.h
	Settlers3/Map/MapGoods.cpp
	Settlers3/Map/MapGoods.h
	Settlers3/Map/MapInfo.cpp
	Settlers3/Map/MapInfo.h
	Settlers3/Map/MapPlayerInfo.cpp
	Settlers3/Map/MapPlayerInfo.h
	Settlers3/Map/MapPreviewImage.cpp
	Settlers3/Map/MapPreviewImage.h
	Settlers3/Map/MapSettlers.cpp
	Settlers3/Map/MapSettlers.h
	Settlers3/Map/MapTeamInfo.cpp
	Settlers3/Map/MapTeamInfo.h
	Settlers3/Map/MapText.cpp
	Settlers3/Map/MapText.h
	Settlers3/Map/MapVictoryConditions.cpp
	Settlers3/Map/MapVictoryConditions.h
	Settlers3/GFXDataType.cpp
	Settlers3/GFXDataType.h
	Settlers3/SNDDataType.cpp
	Settlers3/SNDDataType.h
	Settlers3/MAPDataType.cpp
	Settlers3/MAPDataType.h
	Settlers3/Extractor.cpp
	Settlers3/Extractor.h

	Extractor.cpp
	Extractor.h
)
add_library(Extractor ${src_extractor})
target_link_libraries (Extractor LogSystem Functions)